--- a/frontend/src/components/Label/styles.scss
+++ b/frontend/src/components/Label/styles.scss
@@ -2,7 +2,7 @@
 
 .label {
     display: block;
-    margin: 0 0 1em 0;
+    margin: 0;
     color: cl(dark);
     font-family: var(--font-cursive);
     text-align: center;
